[BUG] Fixes florin spacing issue [LRN-4045]

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -58,7 +58,7 @@
   }
 
   var.mq-f {
-    margin-right: 0.1em;
+    margin-right: 0.2em;
     margin-left: 0.1em;
   }
 
